tests/expectations/compiler/interfaces/module_interface_inherited_record_wrong_program_fail.out
Error [ECHI03712004]: Function `f1` does not match the signature required by interface `test.aleo/interfaces::IChild`.
Expected:
fn f1(t: test.aleo::Token) -> test.aleo::Token
Found:
fn f1(t: other.aleo::Token) -> other.aleo::Token
    --> compiler-test:9:5
     |
   9 |     fn f1(t: other.aleo::Token) -> other.aleo::Token {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  10 |         return t;
     |         ^^^^^^^^^
  11 |     }
     |     ^
     |
     = Function signatures must match exactly: same parameter types, modes, order, and return type.
Warning [WPAR0370002]: Record prototype `Token` does not constrain any fields beyond the implicit `owner: address`. Consider simplifying to `record Token;`.
    --> interfaces.leo:3:1
     |
   3 | 
   4 |     record Token {
     |     ^^^^^^^^^^^^^^
   5 |         owner: address,
     |         ^^^^^^^^^^^^^^^
   6 |         ..
     |         ^^
   7 |     }
     |     ^
Warning [WPAR0370002]: Record prototype `Token` does not constrain any fields beyond the implicit `owner: address`. Consider simplifying to `record Token;`.
    --> interfaces.leo:11:1
     |
  11 | 
  12 |     record Token {
     |     ^^^^^^^^^^^^^^
  13 |         owner: address,
     |         ^^^^^^^^^^^^^^^
  14 |         ..
     |         ^^
  15 |     }
     |     ^
Warning [WPAR0370002]: Record prototype `Token` does not constrain any fields beyond the implicit `owner: address`. Consider simplifying to `record Token;`.
    --> interfaces.leo:3:1
     |
   3 | 
   4 |     record Token {
     |     ^^^^^^^^^^^^^^
   5 |         owner: address,
     |         ^^^^^^^^^^^^^^^
   6 |         ..
     |         ^^
   7 |     }
     |     ^
Warning [WPAR0370002]: Record prototype `Token` does not constrain any fields beyond the implicit `owner: address`. Consider simplifying to `record Token;`.
    --> interfaces.leo:11:1
     |
  11 | 
  12 |     record Token {
     |     ^^^^^^^^^^^^^^
  13 |         owner: address,
     |         ^^^^^^^^^^^^^^^
  14 |         ..
     |         ^^
  15 |     }
     |     ^
